tests/errors/comprehensive/E3011_undefined_return_type.ez
/*
 * Error Test: E3011 - undefined-return-type
 * Expected: "undefined return type"
 */

do getData() -> UnknownType {  // Unknown return type
    give "data"
}

do main() {
    temp x = getData()
}
